<resources>
    <string name="app_name">Tutelage Student</string>
    <string name="FullName">Full Name</string>
    <string name="EmailAddress">Email Address</string>
    <string name="DOB">Date Of Birth</string>
    <string name="ContactNumber">Contact Number</string>
    <string name="City">City</string>
    <string name="pursuing">What are you pursuing</string>
    <string name="call_text">Quality is important to us and your Teachers will get in touch with you. Please check your contact number once again and edit in case you have changed your number.</string>
    <string name="pic_text">Show us how you look. The more information you upload the more completed will be your profile.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ClassName">Class Name(Ex: 2A,3B,4C)</string>
    <string name="Date">Date Of Test</string>
    <string name="Duration">Duration</string>
    <string name="TestName">Test Name</string>
    <string name="TestQuestions">Test Questions</string>
    <string name="Location">Location</string>

    <string name="g1">1. Make sure you have a good internet connection.</string>
    <string name="g2">2. Do not press Home button during the test.</string>
    <string name="g3">3. Click the SUBMIT button to submit your exam. Do not use DONE key in the soft keyboard for submitting.</string>
    <string name="g4">4. Avoid minimizing the application to search for answers outside.</string>
    <string name="g5">5. Make sure you complete the test on or before the given time.</string>

    <string name="timer">00:00:00</string>
    <string name="g6">6. In case of any crashes during the Test, please contact the ADMIN to redirect you through further process.</string>
    <string name="g7">7. Make sure you have selected all the answers before clicking the submit button.</string>
    <string name="RegisterNumber">Register Number</string>


</resources>
