<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorGray"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent">

                </View>

                <TextView
                    android:id="@+id/Filename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:text="Step 1"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:paddingBottom="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="Basic Information"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp"
                android:paddingTop="20dp">


                <EditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/FullName"
                    android:paddingBottom="15dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/regno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/RegisterNumber"
                    android:paddingBottom="15dp"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/EmailAddress"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="15dp"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/classname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/ClassName"
                    android:paddingBottom="15dp"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:hint="@string/DOB"
                    android:inputType="date"
                    android:paddingBottom="15dp"
                    android:singleLine="false"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/ContactNumber"
                    android:inputType="number"
                    android:paddingBottom="15dp"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/passkey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Institution Passkey"
                    android:inputType="text"
                    android:paddingBottom="15dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/Location"
                    android:paddingBottom="15dp"
                    android:textSize="14sp" />


            </LinearLayout>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/next1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp"
            android:scaleType="center"
            app:backgroundTint="@color/colorAccent"
            app:elevation="4dp"
            app:fabSize="normal"
            app:rippleColor="@color/colorAccentDark"
            app:srcCompat="@drawable/ic_keyboard_arrow_right_white_36dp" />
    </RelativeLayout>

</LinearLayout>
